--- a/scss/horizontal.scss
+++ b/scss/horizontal.scss
@@ -223,7 +223,7 @@
       }
 
       .layout-menu-tool {
-        top: calc(3rem - 2px);
+        top: 100%;
         z-index: 21;
         flex-direction: column;
         height: 6rem;
